--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -1,5 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" ng-app="personal" class="ng-scope">
 <head>
+    <link rel="shortcut icon" href="">
     <style type="text/css">
         @charset "UTF-8";
         /*[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak, .ng-hide:not(.ng-hide-animate) {
@@ -99,7 +100,7 @@
                     <h1 class="wow fadeInDown animated" ng-show="!showResume" style="visibility: visible; animation-name: fadeInDown;">Rohan Gupta</h1><br>
 
                     <div class="wow fadeInDown desc animated" style="z-index: 999; position: relative; color: rgb(255, 0, 0); visibility: visible; animation-name: fadeInDown;" ng-show="!showResume">
-                        <span class="wow fadeInDown splashdtext animated" style="visibility: visible; animation-name: fadeInDown;">I'm</span> <span id="typed" class="wow fadeInDown whoiam splashdtext animated" style="visibility: visible; animation-name: fadeInDown;"></span><span class="typed-cursor">|</span>
+                        <span class="wow fadeInDown splashdtext animated" style="visibility: visible; animation-name: fadeInDown;">I'm</span> <span id="typed" class="wow fadeInDown whoiam splashdtext animated" style="visibility: visible; animation-name: fadeInDown;"></span><span class="typed-cursor"></span>
                     </div><br><br>
                     <div>
                    <a href="https://www.dropbox.com/s/jj8ss5qi79o3nzr/GuptaCSResumeLong.pdf?dl=0"><input type="submit" value="Resume" class="wow fadeIn resume animated" /></a>
