--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -94,7 +94,7 @@
     <div id="mainbody" ng-controller="projectController as project" class="ng-scope" style=s"display: block;">
         <div class="splash" style="top: 0px; opacity: 1; animation: huehuehue 30s linear infinite;">
             <div class="movethis" style="display: table; height: 100%; width:100%; text-align:center; overflow: hidden;">
-                <div style="display: table-cell; vertical-align: middle;>
+                <div style="display: table-cell; vertical-align: middle; overflow: hidden>
                     <h2 class="wow fadeInDown animated" ng-show="!showResume" style="visibility: visible; animation-name: fadeInDown;"></h2><br>
 
                     <h1 class="wow fadeInDown animated" ng-show="!showResume" style="visibility: visible; animation-name: fadeInDown;">Rohan Gupta</h1><br>
