--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -126,7 +126,7 @@
             <div class="splash-img-blur"></div>-->
         </div>
 
-        <section class="wow fadeIn animated" style="visibility: visible; animation-name: fadeIn;">
+        <section class="wow fadeIn animated" style="visibility: visible; animation-name: fadeIn; overflow: hidden">
             <h1>About</h1>
 
             <p>Hi! I'm Rohan, a freshman at Purdue University majoring in Computer Science. I'm a technology enthusiast ready to solve the world's problems through the most innovative software. I'm particularly interested in machine learning and data analytics, but I am willing to explore other realms of programming. Check out my Github for the types of programming projects I have done both inside and outside the classroom.</p>
