--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -162,7 +162,7 @@
 
                 <section class="wow fadeIn" data-wow-offset="100" style="visibility: hidden; animation-name: none;">
                     <h1>Contact</h1>
-                    <p>Complete the form below to message me about cool programming projects or opportunities! </p>
+                    <p>Complete the form below to message me about cool programming projects or internship opportunities! </p>
                     <section style="text-align:left;">
                         <form novalidate="" ng-controller="formController as formCntrl" name="emailForm" ng-submit="formCntrl.submitForm()" class="ng-pristine ng-scope ng-invalid ng-invalid-required ng-valid-email">
                             <input class="cform wow fadeIn ng-pristine ng-untouched ng-invalid ng-invalid-required" type="text" placeholder="Name:" name="name" ng-model="email.name" required="" style="visibility: hidden; animation-name: none;">
