--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,7 +19,7 @@ html {
 }
 
 html, body {
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(40,105,236,1) 50%, rgba(0,0,0,1) 100%);
+    background: linear-gradient(to right, transparent, mistyrose);
     font-family: 'Lato',sans-serif;
     font-weight: 300;
     width: 100%;
