--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,7 +19,7 @@ html {
 }
 
 html, body {
-    background: linear-gradient(to right, transparent, mistyrose);
+    background: linear-gradient(70deg, blue, pink);
     font-family: 'Lato',sans-serif;
     font-weight: 300;
     width: 100%;
