--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,7 +19,7 @@ html {
 }
 
 html, body {
-    background: linear-gradient(70deg, blue, pink);
+    background: linear-gradient(to right, #e2ffe2, #ffe1e1);
     font-family: 'Lato',sans-serif;
     font-weight: 300;
     width: 100%;
