--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -105,6 +105,8 @@
                     <div>
                    <a href="https://www.dropbox.com/s/9kqo74be7nipe73/GuptaCSResumeMartyFeedback.pdf?dl=0"><input type="submit" value="Resume" class="wow fadeIn resume animated" /></a>
                     </div>
+                    <div>
+                        <h2><b>Sophomore in Computer Science at Purdue. Software Engineering Intern at UPS and HPE<b><h2>
                     <!--<div ng-show="showResume" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';" class="ng-hide">
                         <div class="ng-modal-overlay" ng-click="showResume=false"></div>
                         <div class="ng-modal-dialog resume-viewer pdfobject-container" id="resume"></div>
