--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -107,6 +107,7 @@
                     </div>
                     <div>
                         <h2><b>Sophomore in Computer Science at Purdue. Software Engineering Intern at UPS and HPE<b><h2>
+                    </div>
                     <!--<div ng-show="showResume" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';" class="ng-hide">
                         <div class="ng-modal-overlay" ng-click="showResume=false"></div>
                         <div class="ng-modal-dialog resume-viewer pdfobject-container" id="resume"></div>
