--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -117,10 +117,10 @@
                     </div>-->
 
                     <div id="social" class="wow fadeInUp animated" ng-show="!showResume" style="visibility: visible; animation-name: fadeInUp;">
-                        <a href="http://github.com/RohanGupta24" class="github"><i class="icon ion-social-github"></i></a>
-                        <a href="https://www.linkedin.com/in/rohan-g-69907b113/" class="linkedin"><i class="icon ion-social-linkedin"></i></a>
-                        <a href="https://medium.com/@rogupster" class="medium"><i class="fa fa-medium"></i></a>
-                        <a href="mailto:gupta326@purdue.edu" class="mail"><i class="icon ion-android-mail"></i></a>
+                        <a href="http://github.com/RohanGupta24" target="_blank" class="github"><i class="icon ion-social-github"></i></a>
+                        <a href="https://www.linkedin.com/in/rohan-g-69907b113/" target="blank" class="linkedin"><i class="icon ion-social-linkedin"></i></a>
+                        <a href="https://medium.com/@rogupster" target="blank" class="medium"><i class="fa fa-medium"></i></a>
+                        <a href="mailto:gupta326@purdue.edu" class="mail"><i class="icon ion-outlook-mail"></i></a>
                     </div>
                 </div>
             </div><br>
