made more changes

--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -103,7 +103,7 @@
                         <span class="wow fadeInDown splashdtext" style="visibility: visible; animation-name: fadeInDown;">I'm</span> <span id="typed" class="wow fadeInDown whoiam splashdtext animated" style="visibility: visible; animation-name: fadeInDown;"></span><span class="typed-cursor"></span>
                     </div><br><br>
                     <div>
-                   <a href="https://www.dropbox.com/s/9kqo74be7nipe73/GuptaCSResumeMartyFeedback.pdf?dl=0"><input type="submit" value="Resume" class="wow fadeIn resume animated" /></a>
+                   <a href="https://www.dropbox.com/s/9kqo74be7nipe73/GuptaCSResumeMartyFeedback.pdf?dl=0"><input type="submit" value="Resume" class="wow fadeIn resume animated"/></a>
                     </div>
                     <div>
                         <h2><b>Sophomore in Computer Science at Purdue. <br> Software Engineering Intern at UPS and HPE <b><h2>
@@ -120,7 +120,7 @@
                         <a href="http://github.com/RohanGupta24" target="_blank" class="github"><i class="icon ion-social-github"></i></a>
                         <a href="https://www.linkedin.com/in/rohan-g-69907b113/" target="blank" class="linkedin"><i class="icon ion-social-linkedin"></i></a>
                         <a href="https://medium.com/@rogupster" target="blank" class="medium"><i class="fa fa-medium"></i></a>
-                        <a href="mailto:gupta326@purdue.edu" class="mail"><i class="icon ion-outlook-mail"></i></a>
+                        <a href="mailto:gupta326@purdue.edu" class="mail"><i class="icon ion-ios-mail"></i></a>
                     </div>
                 </div>
             </div><br>
