--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -120,7 +120,7 @@
                         <a href="http://github.com/RohanGupta24" target="_blank" class="github"><i class="icon ion-social-github"></i></a>
                         <a href="https://www.linkedin.com/in/rohan-g-69907b113/" target="blank" class="linkedin"><i class="icon ion-social-linkedin"></i></a>
                         <a href="https://medium.com/@rogupster" target="blank" class="medium"><i class="fa fa-medium"></i></a>
-                        <a href="mailto:gupta326@purdue.edu" class="mail"><i class="icon ion-ios-mail"></i></a>
+                        <a href="mailto:gupta326@purdue.edu" class="mail"><i class="icon ion-ios-email"></i></a>
                     </div>
                 </div>
             </div><br>
