--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -103,7 +103,7 @@
                         <span class="wow fadeInDown splashdtext" style="visibility: visible; animation-name: fadeInDown;">I'm</span> <span id="typed" class="wow fadeInDown whoiam splashdtext animated" style="visibility: visible; animation-name: fadeInDown;"></span><span class="typed-cursor"></span>
                     </div><br><br>
                     <div>
-                   <a href="https://www.dropbox.com/s/9kqo74be7nipe73/GuptaCSResumeMartyFeedback.pdf?dl=0"><input type="submit" value="Resume" class="wow fadeIn resume animated"/></a>
+                  <input type="submit" value="Resume" class="wow fadeIn resume animated" href="https://www.dropbox.com/s/9kqo74be7nipe73/GuptaCSResumeMartyFeedback.pdf?dl=0"/></a>
                     </div>
                     <div>
                         <h2><b>Sophomore in Computer Science at Purdue <br> <br> Software Engineering Intern at UPS and HPE <b><h2>
