--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -22,6 +22,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+    <link rel="icon" href="https://www.google.com/search?q=logo+with+only+the+letter+R&source=lnms&tbm=isch&sa=X&ved=0ahUKEwj9qpGl3cnaAhWP_YMKHUV8AdoQ_AUICigB&biw=1680&bih=976#imgrc=3WM7vWtkeSf1nM:" type="image/x-icon">
     <title>Rohan Gupta - Software Developer</title>
     <meta name="description=" content="Hi! I'm Rohan, a freshman at Purdue University majoring in Computer Science.">
     <meta name="keywords" content="Rohan">
