--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -22,7 +22,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <title><i class="icon-user icon-black"></i>Rohan Gupta - Software Developer</title>
+    <title>Rohan Gupta - Software Developer</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <meta name="description=" content="Hi! I'm Rohan, a freshman at Purdue University majoring in Computer Science.">
     <meta name="keywords" content="Rohan">
     <meta property="og:title" content="Rohan Gupta">
