--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -22,8 +22,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <title>Rohan Gupta - Software Developer</title>
+    <link rel="icon" type="image/png" href="logo.png"/>
     <meta name="description=" content="Hi! I'm Rohan, a freshman at Purdue University majoring in Computer Science.">
     <meta name="keywords" content="Rohan">
     <meta property="og:title" content="Rohan Gupta">
