--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -22,7 +22,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <title>Rohan Gupta - Software Developer</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="../public/images/logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="css/images/logo.png">
     <meta name="description=" content="Hi! I'm Rohan, a freshman at Purdue University majoring in Computer Science.">
     <meta name="keywords" content="Rohan">
     <meta property="og:title" content="Rohan Gupta">
