added new resume

--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -103,7 +103,7 @@
                         <span class="wow fadeInDown splashdtext" style="visibility: visible; animation-name: fadeInDown;">I'm</span> <span id="typed" class="wow fadeInDown whoiam splashdtext animated" style="visibility: visible; animation-name: fadeInDown;"></span><span class="typed-cursor"></span>
                     </div><br><br>
                     <div>
-                  <input type="submit" style="background-color:red" style="color: white" value="Resume" class="wow fadeIn resume animated" onclick="location.href='https://www.dropbox.com/s/9kqo74be7nipe73/GuptaCSResumeMartyFeedback.pdf?dl=0';"/></a>
+                  <input type="submit" style="background-color:red" style="color: white" value="Resume" class="wow fadeIn resume animated" onclick="location.href='https://www.dropbox.com/s/x7ij0qzclmypolj/GuptaCSResumeOfficial.pdf?dl=0;"/></a>
                     </div>
                     <div>
                         <h2><b>Sophomore in Computer Science at Purdue <br> <br> Software Engineering Intern at UPS and HPE <b><h2>
