--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -103,10 +103,10 @@
                         <span class="wow fadeInDown splashdtext" style="visibility: visible; animation-name: fadeInDown;">I'm</span> <span id="typed" class="wow fadeInDown whoiam splashdtext animated" style="visibility: visible; animation-name: fadeInDown;"></span><span class="typed-cursor"></span>
                     </div><br><br>
                     <div>
-                  <input type="submit" style="background-color:red" style="color: white" value="Resume" class="wow fadeIn resume animated" onclick="location.href='https://www.dropbox.com/s/x7ij0qzclmypolj/GuptaCSResumeOfficial.pdf?dl=0;"/></a>
+                  <input type="submit" style="background-color:red" style="color:white" value="Resume" class="wow fadeIn resume animated" onclick="location.href='https://www.dropbox.com/s/x7ij0qzclmypolj/GuptaCSResumeOfficial.pdf?dl=0;"/></a>
                     </div>
                     <div>
-                        <h2><b>Sophomore in Computer Science at Purdue <br> <br> Software Engineering Intern at UPS and HPE <b><h2>
+                        <h2><b>Sophomore in Computer Science at Purdue <br> <br> Software Engineering Intern at HPE and UPS<b><h2>
                     </div>
                     <!--<div ng-show="showResume" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';" class="ng-hide">
                         <div class="ng-modal-overlay" ng-click="showResume=false"></div>
