--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -90,7 +90,7 @@
     <div id="loading" style="display: none;"></div>
     <div class="loader" style="display: none;">Loading</div>
 
-
+    <link rel="icon" type="image/png" sizes="16x16" href="css/images/logo.png">
     <div id="mainbody" ng-controller="projectController as project" class="ng-scope" style=s"display: block;">
         <div class="splash" style="top: 0px; opacity: 1; animation: huehuehue 30s linear infinite;">
             <div class="movethis" style="display: table; height: 100%; width:100%; text-align:center; overflow: hidden;">
