changed font for name

--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -97,7 +97,7 @@
                 <div style="display: table-cell; vertical-align: middle; overflow: hidden>
                     <h2 class="wow fadeInDown" ng-show="!showResume" style="visibility: visible; animation-name: fadeInDown;"></h2><br>
 
-                    <h1 class="wow fadeInDown" ng-show="!showResume" style="visibility: visible; font-family="serif" animation-name: fadeInDown;">Rohan Gupta</h1><br>
+                    <h1 class="wow fadeInDown" ng-show="!showResume" style="visibility: visible; font-family="optima" animation-name: fadeInDown;">Rohan Gupta</h1><br>
 
                     <div class="wow fadeInDown desc" style="z-index: 999; position: relative; color: rgb(255, 0, 0); visibility: visible; animation-name: fadeInDown;" ng-show="!showResume">
                         <span class="wow fadeInDown splashdtext" style="visibility: visible; animation-name: fadeInDown;">I'm</span> <span id="typed" class="wow fadeInDown whoiam splashdtext animated" style="visibility: visible; animation-name: fadeInDown;"></span><span class="typed-cursor"></span>
