--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -80,7 +80,7 @@
                     //var options = {
                     //    fallbackLink: '<p>This browser does not support inline PDFs. Please download the PDF to view it: <a href="https://www.dropbox.com/s/b9o2q9xkxzzwfji/GuptaCSResume_Summer2017.pdf?dl=0">Download PDF</a></p>'
                     //};
-                    PDFObject.embed("css/resume/GuptaCSResumeOfficial.", "#resume");
+                    PDFObject.embed("css/resume/GuptaCSResumeOfficial.pdf", "#resume");
                 }, 10);
         });
     </script>
