--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -103,7 +103,9 @@
                         <span class="wow fadeInDown splashdtext" style="visibility: visible; animation-name: fadeInDown;">I'm</span> <span id="typed" class="wow fadeInDown whoiam splashdtext animated" style="visibility: visible; animation-name: fadeInDown;"></span><span class="typed-cursor"></span>
                     </div><br><br>
                     <input type="submit" value="Resume" class="wow fadeIn resume" data-wow-delay="1s" ng-click="showResume=true" ng-show="!showResume">
-                    <div ng-show="showResume" class='ng-modal-dialog resume-viewer' id="resume"></div>
+                    <div onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
+                        <div class='ng-modal-overlay' ng-click='showResume=false'></div>
+                        <div class='ng-modal-dialog resume-viewer' id="resume"></div>
                         <div class='ui-buttons ng-modal-close' ng-click="showResume=false" style="z-index: 1;">
                             <i class="icon ion-ios-close-empty"></i>
                         </div>
