--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -57,6 +57,7 @@
     </script>
     <script type="text/javascript">
         //<![CDATA[
+        $scope.showResume=false;
         $(window).load(function () {
             setTimeout(
                 function () {
