--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -111,7 +111,7 @@
                             <i class="icon ion-ios-close-empty"></i>
                         </div>
                     </div>
-                    <div ng-show="showResume">
+                    <div>
                         <h2><b>Sophomore in Computer Science at Purdue <br> <br> Software Engineering Intern at HPE and UPS<b><h2>
                     </div>
                     <!--<div ng-show="showResume" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';" class="ng-hide">
