--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -103,7 +103,7 @@
                     <div class="wow fadeInDown desc" style="z-index: 999; position: relative; color: rgb(255, 0, 0); visibility: visible; animation-name: fadeInDown;" ng-show="!showResume">
                         <span class="wow fadeInDown splashdtext" style="visibility: visible; animation-name: fadeInDown;">I'm</span> <span id="typed" class="wow fadeInDown whoiam splashdtext animated" style="visibility: visible; animation-name: fadeInDown;"></span><span class="typed-cursor"></span>
                     </div><br><br>
-                    <input type="submit" value="Resume" class="wow fadeIn resume" data-wow-delay="1s" ng-click="showResume=true" ng-show="!showResume">
+                    <input type="submit" value="Resume" class="wow fadeIn resume" data-wow-delay="1s" ng-click="resumeButtonPressed()" ng-show="!showResume">
                     <div ng-show="showResume" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
                         <div class='ng-modal-overlay' ng-click='showResume=false'></div>
                         <div class='ng-modal-dialog resume-viewer' id="resume"></div>
@@ -111,9 +111,7 @@
                             <i class="icon ion-ios-close-empty"></i>
                         </div>
                     </div>
-                    <div>
-                        <h2><b>Sophomore in Computer Science at Purdue <br> <br> Software Engineering Intern at HPE and UPS<b><h2>
-                    </div>
+                    <div><h2><b>Sophomore in Computer Science at Purdue <br> <br> Software Engineering Intern at HPE and UPS<b><h2></div>
                     <!--<div ng-show="showResume" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';" class="ng-hide">
                         <div class="ng-modal-overlay" ng-click="showResume=false"></div>
                         <div class="ng-modal-dialog resume-viewer pdfobject-container" id="resume"></div>
@@ -129,7 +127,7 @@
                         <a href="mailto:gupta326@purdue.edu" class="mail"><i class="icon ion-ios-email"></i></a>
                     </div>
                 </div>
-            </div><br>
+            </div>
 
             <!--<div class="splash-img"></div>
             <div class="splash-img-blur"></div>-->
