hopefully this is successful

--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -96,7 +96,7 @@
         <div class="splash" style="top: 0px; opacity: 1; animation: huehuehue 30s linear infinite;">
             <div class="movethis" style="display: table; height: 100%; width:100%; text-align:center; overflow: hidden;">
                 <div style="display: table-cell; vertical-align: middle; overflow: hidden>
-                    <h2 class="wow fadeInDown" ng-show="!showResume" style="visibility: visible; animation-name: fadeInDown;"></h2><br>
+                    <h2 class="wow fadeInDown" ng-show="showResume" style="visibility: visible; animation-name: fadeInDown;"></h2><br>
 
                     <h1 class="wow fadeInDown" ng-show="!showResume" style="visibility: visible; animation-name: fadeInDown; font-family:verdana;">Rohan Gupta</h1><br>
 
