--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -95,23 +95,24 @@
     <div id="mainbody" ng-controller="projectController as project" class="ng-scope" style=s"display: block;">
         <div class="splash" style="top: 0px; opacity: 1; animation: huehuehue 30s linear infinite;">
             <div class="movethis" style="display: table; height: 100%; width:100%; text-align:center; overflow: hidden;">
-                <div style="display: table-cell; vertical-align: middle; overflow: hidden>
-                    <h2 class="wow fadeInDown" ng-show="showResume" style="visibility: visible; animation-name: fadeInDown;"></h2><br>
+                <div style="display: table-cell; vertical-align: middle; overflow: hidden;">
+                    <h2 class="wow fadeInDown" ng-show="!showResume" style="visibility: visible; animation-name: fadeInDown;"></h2><br>
 
-                    <h1 class="wow fadeInDown" ng-show="!showResume" style="visibility: visible; animation-name: fadeInDown; font-family:verdana;">Rohan Gupta</h1><br>
+                    <h1 class="wow fadeInDown" ng-show="!showResume" style="visibility: visible; animation-name: fadeInDown;">Rohan Gupta</h1><br>
 
                     <div class="wow fadeInDown desc" style="z-index: 999; position: relative; color: rgb(255, 0, 0); visibility: visible; animation-name: fadeInDown;" ng-show="!showResume">
                         <span class="wow fadeInDown splashdtext" style="visibility: visible; animation-name: fadeInDown;">I'm</span> <span id="typed" class="wow fadeInDown whoiam splashdtext animated" style="visibility: visible; animation-name: fadeInDown;"></span><span class="typed-cursor"></span>
-                    </div><br><br>
+                    </div><br>
                     <input type="submit" value="Resume" class="wow fadeIn resume" data-wow-delay="1s" ng-click="resumeButtonPressed()" ng-show="!showResume">
+                </div>
                     <div ng-show="showResume" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
                         <div class='ng-modal-overlay' ng-click='showResume=false'></div>
                         <div class='ng-modal-dialog resume-viewer' id="resume"></div>
-                        <div class='ui-buttons ng-modal-close' ng-click="showResume=false" style="z-index: 1;">
+                        <div class='ui-buttons ng-modal-close' ng-click='showResume=false' style="z-index: 1;">
                             <i class="icon ion-ios-close-empty"></i>
                         </div>
                     </div>
-                    <div><h2><b>Sophomore in Computer Science at Purdue <br> <br> Software Engineering Intern at HPE and UPS<b><h2></div>
+                    <div><h2>Sophomore in Computer Science at Purdue. <br> Software Engineering Intern at HPE and UPS<h2></div>
                     <!--<div ng-show="showResume" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';" class="ng-hide">
                         <div class="ng-modal-overlay" ng-click="showResume=false"></div>
                         <div class="ng-modal-dialog resume-viewer pdfobject-container" id="resume"></div>
