--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -111,7 +111,7 @@
                             <i class="icon ion-ios-close-empty"></i>
                         </div>
                     </div>
-                    <div><h2>Sophomore in Computer Science at Purdue. <br> Software Engineering Intern at HPE and UPS<h2></div>
+                    <div ng-show="!showResume"><h2>Sophomore in Computer Science at Purdue. <br> Software Engineering Intern at HPE and UPS<h2></div>
                     <!--<div ng-show="showResume" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';" class="ng-hide">
                         <div class="ng-modal-overlay" ng-click="showResume=false"></div>
                         <div class="ng-modal-dialog resume-viewer pdfobject-container" id="resume"></div>
