--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -1,4 +1,4 @@
-<html xmlns="https://www.w3.org/1999/xhtml" xml:lang="en" lang="en" ng-app="personal" class="ng-scope">
+<html xmlns:ng="https://www.w3.org/1999/xhtml" xml:lang="en" lang="en" ng-app="personal" class="ng-scope">
 <head>
     <style type="text/css">
         @charset "UTF-8";
