--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-
-<html xmlns:ng="https://www.w3.org/1999/xhtml" xml:lang="en" lang="en" ng-app="personal" class="ng-scope">
+<html ng="https://www.w3.org/1999/xhtml" lang="en" ng-app="personal" class="ng-scope">
 <head>
     <style type="text/css">
         @charset "UTF-8";
