--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -9,7 +9,7 @@
         .ng-hide.ng-hide-animate {
             display: none !important;
         }
-        ng\:form {
+        .ng-form {
             display: block;
         }
         .ng-animate-shim {
