--- a/public/css/style.css
+++ b/public/css/style.css
@@ -185,7 +185,7 @@ body {
     background-image: -webkit-linear-gradient(92deg,#f35626,#feab3a);
     -webkit-background-clip: text;
     -webkit-animation: huehuehue 30s infinite linear;
-    margin-top: 200%;
+    /*margin-top: 200%;*/
     position: relative;
     display: none;
 }
