--- a/public/css/style.css
+++ b/public/css/style.css
@@ -167,18 +167,10 @@ body {
     font-size: 1.5em;
 }
 
-.resume {
-    font-size: 1.5em;
-    height: auto !important;
-    width: auto !important;
-    padding: 1em 2em !important;
-    margin: 2em !important;
-    display: none;
-}
 
 .resume-viewer {
     max-width: 1080px;
-    max-height: 80%;
+    max-height: 1080px;
 }
 
 #mainbody {
