--- a/views/HtmlPage.html
+++ b/views/HtmlPage.html
@@ -105,7 +105,7 @@
                         <span class="wow fadeInDown splashdtext" style="visibility: visible; animation-name: fadeInDown;">I'm</span> <span id="typed" class="wow fadeInDown whoiam splashdtext animated" style="visibility: visible; animation-name: fadeInDown;"></span><span class="typed-cursor"></span>
                     </div><br>
                     <input type="submit" value="Resume OLD" class="wow fadeIn resume" data-wow-delay="1s" ng-click="resumeButtonPressed()" ng-show="!showResume">
-                    <a href="/css/resume/GuptaCSResume.pdf" class="wow fadeIn resume">Resume</a>
+                    <a href="/css/resume/GuptaCSResume.pdf" class="wow fadeIn resume"><button>Resume</button></a>
                     <div ng-show="showResume" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
                         <div class='ng-modal-overlay' ng-click='showResume=false'></div>
                         <div class='ng-modal-dialog resume-viewer' id="resume"></div>
